# MAICA_MTTS

./: .gitignore  README.md  README_EN.md  mtts.py  pyproject.toml  requirements.txt  setup.py  start_linux.sh
.github/workflows/: mtts.yml
deprecated/: deploy_tc.ps1  deprecated
documents/: API Document.md  API Document.txt  Backend Deployment.md  Backend Deployment.txt
injection/: start_api.sh  svc_serve.py  tts_serve.py
injection/GPT_weights_v2ProPlus/: README.md
injection/SoVITS_weights_v2ProPlus/: README.md
injection/logs/44k/: G_20000.json  config.json
injection/mtts/: tts_infer.yaml
injection/mtts/GPT-SoVITS/GPT-SoVITS/: tts_infer.yaml
injection/vencoder/: HubertSoft.py  HubertSoft_Onnx.py
mtts/: mtts.py  mtts_env_basis  mtts_http.py  version.py
mtts/audio/: tts_api.py
mtts/initializer/: init_db.py
mtts/mtts_utils/: __init__.py
